--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "ical": "^0.6.0",
     "ics-to-json": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.5"
+    "mongoose": "^5.7.6",
+    "node-ical": "^0.10.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
